Add experimental Vector API implementation